--- a/MvcPWy/Views/Home/About.cshtml
+++ b/MvcPWy/Views/Home/About.cshtml
@@ -1,7 +1,48 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+<link rel="stylesheet" href="~/Content/about.css">
+<div class="col-md-1 column">
+</div>
+<div class="col-md-10 column">
+    <br>
+    <div class="row clearfix">
+        <div class="panel panel-default">
+            <a data-toggle="collapse" href="#overview" aria-expanded="false" aria-controls="overview">
+                <div class="panel-heading w3-container w3-light-grey">
+                    About The Second Home Project
+                </div>
+            </a>
+            <div class="panel-body" id="overview">
+                <p>“The Second Home” is a web based application which can be used by schools to potentially identify students who may fall into homelessness and provide information to teachers regarding support services currently available for such students.</p>
+                <p>The 2011 census by Australian Bureau of Statistics(ABS) estimates that there are 105237 homeless people in Australia, of which 27% are under 18 years of age. Studies have shown that homelessness is damaging to the health and well-being of children, with constant mobility and uncertainty affecting their ability to learn and engage with school. Schooling and proper education is key to save them from the clutches of homelessness.</p>
+                <p>The proposed web application which is aimed to be used by teachers in schools will lay down important indicators, that studies have shown to be directly or indirectly associated with homelessness in school going children, that can be used to identify any students who may be in need of assistance. The application will list out support services that are available for students. The application will also list some initiatives that can be taken up by school to help students who are experiencing some form of homelessness.</p>
+            </div>
+        </div>
+    </div>
+    <p style="text-align:center">
+        <iframe width="560" height="315" style="ali" src="https://www.youtube.com/embed/Hk3dyjdS0vs" frameborder="0" allowfullscreen></iframe>
+    </p>
+    <div class="panel panel-default">
+        <a data-toggle="collapse" href="#references" aria-expanded="false" aria-controls="collapseExample">
+            <div class="panel-heading w3-container w3-light-grey">
+                References and Data Sources
+            </div>
+        </a>
+        <div class="panel-body" id="references">
+            <p>The following are the data sources referenced while building the application:</p>
+            <div class="w3-text-blue">
+                <ul>
+                    <li><a href="http://www.homelessnessaustralia.org.au">Homelessness Australia</a></li>
+                    <li><a href="http://www.abs.gov.au/ausstats/abs.nsf/Latestproducts/2049.0Main%20Features22011?opendocument&tabname=Summary&prodno=2049.0&issue=2011&num=&view=">Australian Bureau of Statistics' Summary of Findings on Homelessness(Census 2011)</a></li>
+                </ul>
+            </div>
+            <p>
+                Disclaimer: Most of the data used are part of the Census 2011. The latest was census conducted in 2016 and the findings are expected to be released in 2016 as per ABS website. It is believed that the current census data may be even more alarming in terms of homelessness.
+                Team Y-Not has not mis represented any information, and all the information are taken from the data sources given above.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="col-md-1 column">
+</div>
