--- a/MvcPWy/Views/Home/Contact.cshtml
+++ b/MvcPWy/Views/Home/Contact.cshtml
@@ -3,7 +3,9 @@
 }
 <link rel="stylesheet" href="~/Content/about.css">
 
-<div class="col-md-12 column">
+<div class="col-md-1 column">
+</div>
+<div class="col-md-10 column">
     <br>
     <div class="row clearfix">
         <div class="panel panel-default">
@@ -87,4 +89,6 @@
             </div>
         </div>
     </div>
+</div>
+<div class="col-md-1 column">
 </div>
