--- a/MvcPWy/Views/Shared/_Layout.cshtml
+++ b/MvcPWy/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - TVK</title>
     @Styles.Render("~/Content/Site.css")
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     @Scripts.Render("~/Scripts/modernizr")
