--- a/MvcPWy/Content/Slides.css
+++ b/MvcPWy/Content/Slides.css
@@ -1,12 +1,5 @@
-﻿*{
-    margin:0;
-    padding:0;
-}
+﻿
 
-body{
-    background:#ccc;
-    font-family: arial,verdana,tahoma;
-}
 /*
 Width of image : 500;
 Width of hovered image: 500
