--- a/MvcPWy/Views/Home/ChatHub.cshtml
+++ b/MvcPWy/Views/Home/ChatHub.cshtml
@@ -170,53 +170,31 @@
 </head>
 
 <div class="container">
-    <div class="row clearfix">
-        <div class="col-md-2 column">
-        </div>
-        <div class="col-md-4 column"></div>
-        <div class="col-md-6">
-            <svg viewBox="0 0 750 130">
-                <symbol id="s-text">
-                    <text text-anchor="middle" x="50%" y="50%">Keep every kid sheltered~</text>
-                </symbol>
-                <g class="g-ants">
-                    <use xlink:href="#s-text" class="text-copy"></use>
-                    <use xlink:href="#s-text" class="text-copy"></use>
-                    <use xlink:href="#s-text" class="text-copy"></use>
-                    <use xlink:href="#s-text" class="text-copy"></use>
-                    <use xlink:href="#s-text" class="text-copy"></use>
-                </g>
-            </svg>
-        </div>
-    </div>
+    
     <div class="row clearfix">
         <div class="col-md-2">
-            <br>
-            <br>
-            <br>
-            <br>
             <div class="row">
                 <hr class="hr-danger" />
                 <ol class="breadcrumb bread-danger">
-                    <li class="btn btn-danger"><i class="fa fa-flag"></i>@Html.ActionLink("Identify Vulnerable Kids", "IdentifyVulnerableKids", "Home", new { @style = "color: white" })</li>
+                    <li class="btn btn-danger"><i class="fa fa-flag"> </i> @Html.ActionLink("Identify Vulnerable Kids", "IdentifyVulnerableKids", "Home", new { @style = "color: white" })</li>
                 </ol>
             </div>
             <div class="row">
                 <hr class="hr-primary" />
                 <ol class="breadcrumb bread-primary">
-                    <li class="btn btn-primary" style="color: white"><i class="fa fa-bar-chart"></i>@Html.ActionLink("EducationalOutcomes", "EducationalOutcomes", "Home", new { @style = "color: white" })</li>
+                    <li class="btn btn-primary" style="color: white"><i class="fa fa-bar-chart"></i> @Html.ActionLink("Educational Outcomes", "EducationalOutcomes", "Home", new { @style = "color: white" })</li>
                 </ol>
             </div>
             <div class="row">
                 <hr class="hr-success" />
                 <ol class="breadcrumb bread-success">
-                    <li class="btn btn-success"><i class="fa fa-paw"></i>@Html.ActionLink("Support Services", "SupportServices", "Home", new { @style = "color: white" })</li>
+                    <li class="btn btn-success"><i class="fa fa-paw"></i> @Html.ActionLink("Support Services", "SupportServices", "Home", new { @style = "color: white" })</li>
                 </ol>
             </div>
             <div class="row">
                 <hr class="hr-info" />
                 <ol class="breadcrumb bread-purple">
-                    <li class="btn btn-info"><i class="fa fa-envelope"></i>@Html.ActionLink("Email Helper", "EmailHelper", "Home", new { @style = "color: white" })</li>
+                    <li class="btn btn-info"><i class="fa fa-envelope"></i> @Html.ActionLink("Email Helper", "EmailHelper", "Home", new { @style = "color: white" })</li>
                 </ol>
             </div>
             <div class="row">
@@ -256,7 +234,7 @@
             <div class="row">
                 <hr class="hr-doc" />
                 <ol class="breadcrumb bread-doc">
-                    <li class="btn btn-doc"><i class="fa fa-file-pdf-o"></i>@Html.ActionLink("Doc Helper", "EmailHelper", "Home", new { @style = "color: white" })</li>
+                    <li class="btn btn-doc"><i class="fa fa-file-pdf-o"></i> @Html.ActionLink("Education Plan", "EmailHelper", "Home", new { @style = "color: white" })</li>
                 </ol>
             </div>
         </div>
