--- a/MvcPWy/Views/Shared/_Layout.cshtml
+++ b/MvcPWy/Views/Shared/_Layout.cshtml
@@ -140,23 +140,9 @@
     </style>
 </head>
 <body>
-    <canvas id="canv" style="z-index: -10"></canvas>
-    <div class="sky" style="z-index: -1">
-        <div class="clouds" style="z-index: -1">
-            <div class="c1 one"></div>
-            <div class="c1 two"></div>
-            <div class="c1 three"></div>
-            <div class="c1 four"></div>
-            <div class="c2 one"></div>
-            <div class="c2 two"></div>
-            <div class="c2 three"></div>
-            <div class="c2 four"></div>
-        </div>
-    </div>
-    <script src="~/Scripts/BGbird.js"></script>
     <div class="col-md-1">
     </div>
-    <div class="col-md-10">
+    <div class="col-md-10" style="text-align:center">
         <br>
         <div id="body">
             @RenderSection("featured", required: false)
@@ -184,7 +170,7 @@
                 </button>
             </div>
             <div class="navbar-collapse collapse">
-                <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+                <a class="navbar-brand" rel="home" href="#" title="TVK">
                     <img style="width:50px; margin-top: -13px;-moz-transform: translate(25px, 0px); -webkit-transform: translate(25px, 0px);" src="~/Image/logo.png">
                 </a>
                 <ul class="nav navbar-nav">
