--- a/MvcPWy/Content/Text.css
+++ b/MvcPWy/Content/Text.css
@@ -3,16 +3,14 @@
 
 
 .square {
-    width: 590px;
-    height: 80px;
+    width: 80%;
+    height: 100%;
     position: relative;
-    bottom: 430px;
-    left: 0px;
-    right: 300px;
-    margin: 50vh auto;
+    margin: 61vh auto;
     transform: translateY(-50%);
     overflow: hidden;
     animation: movinInBlock 1s ease-out;
+    text-align: center;
 }
 
     .square div {
@@ -377,4 +375,7 @@
     }
 }
 body {
+}
+.logo {
+    color: white;
 }
