--- a/MvcPWy/Views/Account/Register.cshtml
+++ b/MvcPWy/Views/Account/Register.cshtml
@@ -2,7 +2,11 @@
 @{
     ViewBag.Title = "Register";
 }
-
+<style>
+    a {
+        color: #B3E5FC;
+    }
+</style>
 <h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new {@class = "form-horizontal", role = "form"}))
