--- a/MvcPWy/Views/Home/Index.cshtml
+++ b/MvcPWy/Views/Home/Index.cshtml
@@ -7,32 +7,28 @@
 <link rel="stylesheet" href="~/Content/Text.css">
 <div class="container">
     <div class="col-md-2">
-        <br>
-        <br>
-        <br>
-        <br>
         <div class="row">
             <hr class="hr-danger" />
             <ol class="breadcrumb bread-danger">
-                <li class="btn btn-danger"><i class="fa fa-flag"></i>@Html.ActionLink("Identify Vulnerable Kids", "IdentifyVulnerableKids", "Home", new { @style = "color: white" })</li>
+                <li class="btn btn-danger"><i class="fa fa-flag"> </i> @Html.ActionLink("Identify Vulnerable Kids", "IdentifyVulnerableKids", "Home", new { @style = "color: white" })</li>
             </ol>
         </div>
         <div class="row">
             <hr class="hr-primary" />
             <ol class="breadcrumb bread-primary">
-                <li class="btn btn-primary" style="color: white"><i class="fa fa-bar-chart"></i>@Html.ActionLink("EducationalOutcomes", "EducationalOutcomes", "Home", new { @style = "color: white" })</li>
+                <li class="btn btn-primary" style="color: white"><i class="fa fa-bar-chart"></i> @Html.ActionLink("Educational Outcomes", "EducationalOutcomes", "Home", new { @style = "color: white" })</li>
             </ol>
         </div>
         <div class="row">
             <hr class="hr-success" />
             <ol class="breadcrumb bread-success">
-                <li class="btn btn-success"><i class="fa fa-paw"></i>@Html.ActionLink("Support Services", "SupportServices", "Home", new { @style = "color: white" })</li>
+                <li class="btn btn-success"><i class="fa fa-paw"></i> @Html.ActionLink("Support Services", "SupportServices", "Home", new { @style = "color: white" })</li>
             </ol>
         </div>
         <div class="row">
             <hr class="hr-info" />
             <ol class="breadcrumb bread-purple">
-                <li class="btn btn-info"><i class="fa fa-envelope"></i>@Html.ActionLink("Email Helper", "EmailHelper", "Home", new { @style = "color: white" })</li>
+                <li class="btn btn-info"><i class="fa fa-envelope"></i> @Html.ActionLink("Email Helper", "EmailHelper", "Home", new { @style = "color: white" })</li>
             </ol>
         </div>
         <div class="row">
@@ -72,7 +68,7 @@
         <div class="row">
             <hr class="hr-doc" />
             <ol class="breadcrumb bread-doc">
-                <li class="btn btn-doc"><i class="fa fa-file-pdf-o"></i>@Html.ActionLink("Doc Helper", "EmailHelper", "Home", new { @style = "color: white" })</li>
+                <li class="btn btn-doc"><i class="fa fa-file-pdf-o"></i> @Html.ActionLink("Education Plan", "EmailHelper", "Home", new { @style = "color: white" })</li>
             </ol>
         </div>
     </div>
@@ -160,39 +156,7 @@
                         </li>
                     </ul>
                 </div>*@
-            <div id="myCarousel" class="carousel slide" data-ride="carousel" style="position: relative; top: 140px;">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
-
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="~/Image/youth4.jpg" alt="Los Angeles" style="width: 100%;">
-                    </div>
-
-                    <div class="item">
-                        <img src="~/Image/youth2.jpg" alt="Chicago" style="width: 100%;">
-                    </div>
-
-                    <div class="item">
-                        <img src="~/Image/youth3.jpg" alt="New york" style="width: 100%;">
-                    </div>
-                </div>
-
-                <!-- Left and right controls -->
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+            
         </div>
     </div>
 </div>
