--- a/MvcPWy/Views/Home/Contact.cshtml
+++ b/MvcPWy/Views/Home/Contact.cshtml
@@ -1,87 +1,97 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<link rel="stylesheet" href="~/Content/about.css">
+<link rel="stylesheet" href="~/Content/Site.css" />
+<link rel="stylesheet" href="~/Content/BGbird.css" />
+<link rel="stylesheet" href="~/Content/now-ui-kit.css" />
+<script src="~/Scripts/now-ui-kit.js"></script>
+<link rel="stylesheet" href="~/Content/about.css" />
 
-<div class="col-md-1 column">
-</div>
-<div class="col-md-10 column">
-    <br>
-    <div class="row clearfix">
-        <div class="panel panel-default">
-            <a data-toggle="collapse" href="#team" aria-expanded="false" aria-controls="team">
-                <div class="panel-heading w3-container w3-light-grey">
-                    <span class="label label-default"> ©Team Y-Nots</span>
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="https://github.com/MonashIE2017S2/thesecondhome" class="fa fa-github"></a>
-                    <a href="#" class="fa fa-instagram"></a>
-                </div>
-            </a>
-            <div class="panel-body" id="team">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="w3-card-4 w3-center w3-hover-teal">
-                            <div class="w3-container w3-center">
-                                Roshan
+<div class="wrapper">
+    <div class="container">
+        <div class="container section-team text-center">
+            <div class="container">
+                <h2 class="title">Team Y-Nots</h2>
+                <div class="team">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="blockquote blockquote-primary team-player">
+                                <img src="~/Image/roshan.jpg" alt="Roshan, Master of Information Technology, Monash"
+                                     class="rounded-circle img-fluid img-raised">
+                                <h4 class="title">Roshan</h4>
+                                <p class="category text-primary">Developer</p>
+                                <p class="description">
+                                    Roshan is a Master of Information Technology student at Monash.
+                                    He is experienced in C# Entity Framework, AngularJS, Angular4 and JAVA.
+                                    He likes soccer, badminton and plays violin.
+                                </p>
+                                <a href="https://www.linkedin.com/in/roshankrishnanthirikkott/"
+                                   class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin fa-lg"></i></a>
+                                <a href="mailto:roshankrishnan7@gmail.com" class="btn btn-primary btn-icon btn-round">
+                                    <i class="fa fa-envelope fa-lg"></i>
+                                </a>
+                                <a href="https://github.com/roshankrishnan7" class="btn btn-primary btn-icon btn-round">
+                                <i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                             </div>
-                            <img src="~/Image/roshan.PNG">
-                            <div class="w3-container w-right">
-                                <ul class="w3-center">
-                                    <li>Developer</li>
-                                    <li>Master of Information Technology Student,</li>
-                                    <li>Monash University</li>
-                                </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="blockquote blockquote-primary team-player">
+                                <img src="~/Image/yang.png" alt="Yang, Master of Information Technology, Monash"
+                                     class="rounded-circle img-fluid img-raised">
+                                <h4 class="title">Yang</h4>
+                                <p class="category text-primary">Developer</p>
+                                <p class="description">
+                                    Yang is a Master of Information Technology student at Monash. He is an Android
+                                    developer as well as
+                                    web developer with proficiency in JAVA, C#, and has a keen interest in Machine Learning.
+                                    He likes photography
+                                </p>
+                                <a href="https://www.linkedin.com/in/roshankrishnanthirikkott/"
+                                   class="btn btn-primary btn-icon btn-round" ><i class="fa fa-linkedin fa-lg"></i></a>
+                                <a href="mailto:roshankrishnan7@gmail.com" class="btn btn-primary btn-icon btn-round">
+                                    <i class="fa fa-envelope fa-lg"></i>
+                                </a>
+                                <a href="https://github.com/fredrickdeng" class="btn btn-primary btn-icon btn-round">
+                                <i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="w3-card-4 w3-center w3-hover-teal">
-                            <div class="w3-container w3-center">
-                                Yang
-                            </div>
-                            <img src="~/Image/yang.PNG" class="image">
-                            <div class="w3-container w-right">
-                                <ul class="w3-center">
-                                    <li>Developer</li>
-                                    <li>Master of Information Technology Student,</li>
-                                    <li>Monash University</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <br /><br />
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="w3-card-4 w3-center w3-hover-teal">
-                            <div class="w3-container w3-center">
-                                Cary
-                            </div>
-                            <img src="~/Image/cary.PNG" class="image">
-                            <div class="w3-container w-right">
-                                <ul class="w3-center">
-                                    <li>Business Analyst</li>
-                                    <li>Master of BIS Student,</li>
-                                    <li>Monash University</li>
-                                </ul>
+                    <div class="row" padding-top="10px"><br /><br /></div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="blockquote blockquote-primary team-player">
+                                <img src="~/Image/cary.png" alt="Cary, Master of Business Information Systems, Monash"
+                                     class="rounded-circle img-fluid img-raised">
+                                <h4 class="title">Cary</h4>
+                                <p class="category text-primary">Business Analyst</p>
+                                <p class="description">
+                                    Cary is a Master of Business Information System student at Monash. She is good
+                                    at analysing requirements
+                                    and stakeholder management. She likes travelling.
+                                </p>
+                                <a href="https://www.linkedin.com/in/roshankrishnanthirikkott/"
+                                   class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin fa-lg"></i></a>
+                                <a href="mailto:roshankrishnan7@gmail.com" class="btn btn-primary btn-icon btn-round">
+                                    <i class="fa fa-envelope fa-lg"></i>
+                                </a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="w3-card-4 w3-center w3-hover-teal">
-                            <div class="w3-container w3-center">
-                                Han
-                            </div>
-                            <img src="~/Image/han.PNG" class="image">
-                            <div class="w3-container w-right">
-                                <ul class="w3-center">
-                                    <li>Business Analyst</li>
-                                    <li>Master of BIS Student,</li>
-                                    <li>Monash University</li>
-                                </ul>
+                        <div class="col-md-6">
+                            <div class="blockquote blockquote-primary team-player">
+                                <img src="~/Image/han.png" alt="Han, Master of Business Information Systems, Monash"
+                                     class="rounded-circle img-fluid img-raised">
+                                <h4 class="title">Han</h4>
+                                <p class="category text-primary">Business Analyst</p>
+                                <p class="description">
+                                    Han is a Master of Business Information System student at Monash. He is
+                                    proficient in product functionality design and UI design.
+                                    He likes adventure sports and shooting.
+                                </p>
+                                <a href="https://www.linkedin.com/in/roshankrishnanthirikkott/"
+                                   class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin fa-lg"></i></a>
+                                <a href="mailto:roshankrishnan7@gmail.com" class="btn btn-primary btn-icon btn-round">
+                                    <i class="fa fa-envelope fa-lg"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -89,6 +99,4 @@
             </div>
         </div>
     </div>
-</div>
-<div class="col-md-1 column">
 </div>
