--- a/MvcPWy/Views/Home/Index.cshtml
+++ b/MvcPWy/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         <div class="row">
             <hr class="hr-primary" />
             <ol class="breadcrumb bread-primary">
-                <li class="btn btn-primary" style="color: white"><i class="fa fa-bar-chart"></i>@Html.ActionLink("EducationalOutcomes", "EducationalOutcomes", "Home", new { @style = "color: white" })</li>
+                <li class="btn btn-primary" style="color: white"><i class="fa fa-bar-chart"></i>@Html.ActionLink("Vulnerable Kids Facts", "EducationalOutcomes", "Home", new { @style = "color: white" })</li>
             </ol>
         </div>
         <div class="row">
@@ -38,8 +38,10 @@
         <div class="row">
             <hr class="hr-warning" />
             <ol class="breadcrumb bread-warning">
-                <a id="modal-2" href="#modal-container-2" data-toggle="modal" class="btn btn-warning"> <i class="fa fa-comments"></i> Teachers' Chat Hub</a>
-                <div class="modal fade" id="modal-container-2" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <li class="btn btn-warning"><i class="fa fa-comments"></i>@Html.ActionLink("Experience Sharing", "ChatHub", "Home", new { @style = "color: white" })</li>
+                @* <li data-target="#myModal"  data-toggle="modal" class="btn btn-warning"> <i class="fa fa-comments"></i> Teachers' Chat Hub</li>
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" role="dialog">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -66,7 +68,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>*@
             </ol>
         </div>
         <div class="row">
@@ -160,7 +162,7 @@
                         </li>
                     </ul>
                 </div>*@
-            <div id="myCarousel" class="carousel slide" data-ride="carousel" style="position: relative; top: 140px;">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel" style="position: relative; top: 65px;">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -171,15 +173,15 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="~/Image/youth4.jpg" alt="Los Angeles" style="width: 100%;">
+                        <img src="~/Image/bg.jpg" alt="Los Angeles" style="width: 100%;">
                     </div>
 
                     <div class="item">
-                        <img src="~/Image/youth2.jpg" alt="Chicago" style="width: 100%;">
+                        <img src="~/Image/bg2.jpg" alt="Chicago" style="width: 100%;">
                     </div>
 
                     <div class="item">
-                        <img src="~/Image/youth3.jpg" alt="New york" style="width: 100%;">
+                        <img src="~/Image/bg3.jpg" alt="New york" style="width: 100%;">
                     </div>
                 </div>
 
