--- a/MvcPWy/Views/Account/Login.cshtml
+++ b/MvcPWy/Views/Account/Login.cshtml
@@ -4,19 +4,24 @@
     ViewBag.Title = "Log in";
 }
 <style>
-    a {
-        color: #B3E5FC;
-    }
-        a:hover {
+     a:hover {
             color: #0D47A1;
             font-size: larger;
         }
+        body {
+            background : white;
+            
+            text-align: center;
+        }
+    .checkbox {
+        float: inherit;
+    }
 </style>
 
 <h2>@ViewBag.Title.</h2>
 <div class="container">
     <div class="row clearfix">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <section id="loginForm">
                 @using (Html.BeginForm("Login", "Account", new { ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
@@ -32,27 +37,30 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                        <div class="col-md-10">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-10">
-                            <div class="checkbox">
-                                @Html.CheckBoxFor(m => m.RememberMe)
-                                @Html.LabelFor(m => m.RememberMe)
+                        <div>
+                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                            </div>
                             </div>
                         </div>
+                    <div class="form-group" >
+                        <div class="col-md-2"></div>
+                        <div class="col-md-3">                            
+                                @Html.CheckBoxFor(m => m.RememberMe)
+                                @Html.LabelFor(m => m.RememberMe)                            
+                        </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-10">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-3">
                             <input type="submit" value="Log in" class="btn btn-primary" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-10">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-3">
                             <p>
                                 @Html.ActionLink("Register as a new user", "Register")
                             </p>
