--- a/MvcPWy/Views/Account/Register.cshtml
+++ b/MvcPWy/Views/Account/Register.cshtml
@@ -3,8 +3,13 @@
     ViewBag.Title = "Register";
 }
 <style>
-    a {
-        color: #B3E5FC;
+    a:hover {
+        color: #0D47A1;
+        font-size: larger;
+    }
+    body {
+        background: white;
+        text-align: center;
     }
 </style>
 <h2>@ViewBag.Title.</h2>
@@ -34,9 +39,11 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register"/>
+        <div class="col-md-2"></div>
+        <div class="col-md-3">
+            <input type="submit" class="btn btn-primary" value="Register"/>
         </div>
+        <div class="col-md-7"></div>
     </div>
 }
 
